Thu Oct 19 23:31:41 2000  Christopher Faylor <cgf@cygnus.com>

	* external.cc (fillout_pinfo): Pass PID_NOREDIR flag to pinfo init to
	avoid finding execed processes twice.
	* signal.cc (kill_pgrp): Ditto.
	* spawn.cc (spawn_guts): Avoid passing first argument to CreateProcess
	when running a windows shell so that CreateProcess will locate the
	shell.  Reorganize so that correct error is returned when CreateProcess
	fails.

Thu Oct 19 13:55:31 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (sigthread::init): Correct overzealous ifdef.
	* exceptions.cc (call_handler): Avoid calling sigthread acquire lock.
	* sigproc.h (sigthread): Comment out lock for now.
	* sync.cc (muto::acquire): Add a minor optimization.

2000-10-18  DJ Delorie  <dj@redhat.com>

	* Makefile.in: add miscfuncs.cc
	* miscfuncs.cc: new, miscellaneous functions
	* winsup.h: define table-driven tolower/toupper
	* environ.cc: use them
	* fhandler_console.cc: ditto
	* fhandler_termios: ditto
	* path.cc: ditto
	(strncasematch, strcasematch, strcasestr): move to miscfuncs.cc

Wed Oct 18 20:50:27 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.h (sigthread): Eliminate locking for now since per thread
	signalling is not available.
	* dcrt0.cc (sigthread::init): Ditto.
	(dll_crt0_1): Move set_process_privileges call (temporarily?) to
	pinfo_init.
	(pinfo_init): Only call set_process_privileges when allow_ntsec.

2000-10-18  DJ Delorie  <dj@redhat.com>

	* dcrt0.cc (dll_crt0_1): init cygcwd before forkee branch
	
	* environ.cc (conv_start_chars): Cache a table of "first
	characters" for environment variables needing conversion.
	(getwinenv): Use it.
	(environ_init): Create it, also check first chars for TERM and
	CYGWIN.
	
	* path.cc: Use lookup table for case insensitive comparisons.

Wed Oct 18 00:48:49 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (call_handler): Make signal pending if sigsave.sig is
	still active.
	* syscalls.cc (_read): Don't clear errno.